--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.34",
     "@types/redux": "^3.6.31",
-    "@types/redux-thunk": "^2.1.32"
+    "@types/redux-thunk": "^2.1.32",
+    "webpack-dev-server": "^5.2.2"
   }
 }
