--- a/react-fe/package.json
+++ b/react-fe/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "react": "^19.1.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.1.0",
     "react-multi-carousel": "^2.8.6",
     "react-redux": "^9.2.0",
